--- a/Demo.API/appsettings.json
+++ b/Demo.API/appsettings.json
@@ -1,7 +1,7 @@
 {
-    "ConnectionStrings": {
-        "DefaultConnection": "Data Source=DESKTOP-19QQ8VE\\MSSQLSERVER03;Initial Catalog=EmpDB;Integrated Security=false;User ID=sa;Password=user@123;Trust Server Certificate=True"
-    },
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=DESKTOP-49D7IT0\\MSSQLSERVER01;Initial Catalog=DemoDB;Integrated Security=false;User ID=sa;Password=user@123;Trust Server Certificate=True"
+  },
     "Logging": {
         "LogLevel": {
             "Default": "Information",
